[package]
name = "poller"
version = "0.1.0"
authors = ["grant"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "3.5.4"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"