[package]
name = "poller"
version = "0.1.1"
authors = ["grant"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
askama = { version = "0.10.5", features = ["with-tide", "serde-json"] }
askama_tide = "0.13.0"
async-session = { version = "3.0" }
async-std = { version = "1.9.0", features = ["attributes"] }
clap = "3.0.0-beta.2"
hex = "0.4.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.0"
sha2 = "0.9.5"
sqlx = { version = "0.5", features = [ "runtime-async-std-rustls", "sqlite", "chrono" ] }
tide = "0.16.0"